# shawa-bear-tg-mini-app

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 029ddd7c55a1_add_fields_to_order.py  0b4c3546dd69_added_photo.py  0f38330194a0_add_ingredient_type.py  11c7f3214195_is_admin_user.py  140cda419305_fix.py  173ecf119ab3_delete_pk_for_category_in_product.py  30053a7bbc44_change_tables_for_products_and_basket.py  4004f9303c88_added_user_model.py  45518b7179ef_not_unique.py  4adc2ca6bf67_added_basket_model.py  52948f2fc9da_add_orders_table.py  556a0be7da8a_add_basket_item_excluded_ingredients.py  55b312983f1f_update_size_model.py  5cea3571b92b_add_coins_for_user.py  71ef45e4d673_add_grams_for_ingredient.py  735deaa7b8d7_add_order_items.py  7d848b238e44_cpfc_to_float.py  8152e2f1060a_add_time_zone.py  91d7da6375ff_import_changes.py  99a17b14ec72_add_color.py  a5856475db8d_add_user_phone_number.py  a97a4d8476b7_add_params_for_price.py  ad6f2243f399_initial.py  b3d965648abf_add_user_id_to_order.py  b924e9807a60_delete_ingredient_comment.py  bf0f6de0ff75_added_ingredient.py  c5a1ee4c6816_fix_price_id_in_basket_item.py  c5d79373a11b_initial.py  c8ca1f1ce46e_basket_model_update.py  cb510355b1bd_discount.py  d499133a37fa_add_cascade_delete.py  d847c75cca6f_add_status_to_order.py  e203bf36a6b8_add_ingredient_price.py  e23f467cd66f_not_unique_product.py  e4b620d4e8dc_add_categories_table.py  e7e79da950cb_add_fields_to_order.py  f86eb54d3341_add_ingredient_comment.py
backend/src/: __main__.py  config.py  container.py  database.py  db.py  settings.py
backend/src/admin/models/: basket_admin.py  category_admin.py  ingredient_admin.py  order_admin.py  price_admin.py  product_admin.py  (+2 more)
backend/src/api/: errors.py  main.py
backend/src/bot/: main.py
backend/src/server/: app.py  handle_erros.py
backend/src/services/: base.py  errors.py  schemas.py  static.py  utils.py
backend/src/settings/: database.py  redis.py  test_database.py  uvicorn.py
backend/tests/: conftest.py
backend/tests/server/: test_swagger.py
backend/tests/service/: test_products.py
bot/: Dockerfile  api_client.py  config.py  database.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  server.py  service.py
bot/handlers/: message_handlers.py
bot/src/: __main__.py  app.py  config.py  schemas.py
bot/src/handlers/: message_handlers.py
(+165 files in other folders)
