[tool.pytest.ini_options]
pythonpath = [
    ".", "src/api"
]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode="auto"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Drik Daniil <27danik98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "23.2.1"
aiohappyeyeballs = "2.3.7"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
alembic = "1.13.2"
annotated-types = "0.7.0"
anyio = "4.4.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
attrs = "24.2.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.6.1"
ecdsa = "0.19.0"
email-validator = "2.2.0"
fastapi = "0.112.1"
frozenlist = "1.4.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
iniconfig = "2.0.0"
magic-filter = "1.0.12"
mako = "1.3.5"
markupsafe = "2.1.5"
multidict = "6.0.5"
packaging = "24.1"
passlib = "1.7.4"
pluggy = "1.5.0"
pyasn1 = "0.6.0"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pytelegrambotapi = "4.22.1"
pytest = "8.3.2"
pytest-asyncio = "0.24.0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.9"
requests = "2.32.3"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.32"
starlette = "0.38.2"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
uvicorn = "0.30.6"
yarl = "1.9.4"
ruff = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
