[tool.pytest.ini_options]
pythonpath = [
    ".", "src/"
]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode="auto"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["d.drik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
aiofiles = "^24.1.0"
uvicorn = "^0.34.0"
dependency-injector = "^4.44.0"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
greenlet = "^3.1.1"
python-multipart = "^0.0.20"
sqladmin = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
