[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["d.drik <27danik98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.19.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
